Implementando versao jetty sem ser embeeded